<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".InputData"
    android:background="@drawable/backgroundpic"
    android:gravity="center">

    <TextView
        android:id="@+id/Inputdata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/input_data"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:id="@+id/Surah"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/inputtext"
        android:hint="@string/surah"
        android:padding="15dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/lightgrey"/>

    <EditText
        android:id="@+id/NoSurah"
        android:layout_width="300dp"
        android:background="@drawable/inputtext"
        android:layout_height="wrap_content"
        android:hint="@string/no_surah"
        android:padding="15dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/lightgrey"
        />
    <EditText
        android:id="@+id/tarannum"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/inputtext"
        android:hint="@string/tarannum"
        android:padding="15dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/lightgrey"
        />
    <EditText
        android:id="@+id/Reciter"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/inputtext"
        android:hint="@string/reciter"
        android:padding="15dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/lightgrey"
        />

    <Button
        android:id="@+id/filePickerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:drawableStart="@drawable/baseline_attach_file_24"
        android:text="Select File"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <!-- New Button to play the audio -->
    <Button
        android:id="@+id/playAudioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Play Audio"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btnstyle"
        android:text="SAVE"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="Back"
            android:textSize="15sp"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</LinearLayout>